--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             background-color: var(--background-color);
             color: var(--text-color);
         }
+        .service-logo {
+        width: 150px;
+        height: 150px;
+        object-fit: contain;
+    }
         .slds-button_brand {
             background-color: var(--primary-color);
             border-color: var(--primary-color);
@@ -98,7 +103,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/customer-data-platform/cdp-logo.png" alt="Customer Data Platform Logo" class="slds-m-right_small service-logo">
+                                        <img src="CDP2.PNG" alt="Customer Data Platform Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Customer Data Platform</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -109,7 +114,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/data-cloud/data-cloud-logo.png" alt="Data Cloud Logo" class="slds-m-right_small service-logo">
+                                        <img src="DataCloud.png" alt="Data Cloud Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Data Cloud</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -120,7 +125,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/integration-cloud/mulesoft-logo.png" alt="MuleSoft Logo" class="slds-m-right_small service-logo">
+                                        <img src="MulesoftLogo.png" alt="MuleSoft Logo"  style="width: 1000px; height: 1000px;" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">MuleSoft Integration</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -133,7 +138,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/marketing-cloud/logo-email-studio.png" alt="Email Studio Logo" class="slds-m-right_small service-logo">
+                                        <img src="EmailStudio.png" alt="Email Studio Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Email Studio</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -144,7 +149,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/marketing-cloud/logo-journey-builder.png" alt="Journey Builder Logo" class="slds-m-right_small service-logo">
+                                        <img src="JourneyBuilder.png" alt="Journey Builder Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Journey Builder</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -155,7 +160,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/marketing-cloud/logo-mobile-studio.png" alt="Mobile Studio Logo" class="slds-m-right_small service-logo">
+                                        <img src="MobileStudio.png" alt="Mobile Studio Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Mobile Studio</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -166,7 +171,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/marketing-cloud/logo-social-studio.png" alt="Social Studio Logo" class="slds-m-right_small service-logo">
+                                        <img src="Social.png" alt="Social Studio Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Social Studio</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -177,7 +182,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/marketing-cloud/logo-advertising-studio.png" alt="Advertising Studio Logo" class="slds-m-right_small service-logo">
+                                        <img src="AdvertisingStudio.png" alt="Advertising Studio Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Advertising Studio</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
@@ -188,7 +193,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="https://www.salesforce.com/content/dam/web/en_us/www/images/marketing-cloud/logo-interaction-studio.png" alt="Interaction Studio Logo" class="slds-m-right_small service-logo">
+                                        <img src="InteractionStudio2.png" alt="Interaction Studio Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Interaction Studio</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
