--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="canonical" href="https://www.redhibbertgroup.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@salesforce-ux/design-system/assets/styles/salesforce-lightning-design-system.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="rhglogo.ico" type="image/x-icon">
     <style>
         :root {
             --primary-color: #E3170A;
