--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="JourneyBuilder.png" alt="Journey Builder Logo" class="slds-m-right_small service-logo">
+                                        <img src="JB.jpg" alt="Journey Builder Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Journey Builder</h3>
                                     </div>
                                     <div class="slds-card__body slds-card__body_inner">
