added email page in home

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="slds-global-header__item">
                         <nav class="slds-navigation" role="navigation">
                             <ul class="slds-list_horizontal">
-                                <li><a href="#home">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="#services">Services</a></li>
                                 <li><a href="#about">About</a></li>
                                 <li><a href="blog.html">Blog</a></li>
@@ -137,11 +137,14 @@
                             
                             <!-- Marketing Cloud Services -->
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
+                                <a href="emailStudio.html">
                                 <div class="slds-card">
                                     <div class="slds-card__header slds-grid slds-grid_vertical-align-center">
-                                        <img src="EmailStudio.png" alt="Email Studio Logo" class="slds-m-right_small service-logo">
+                                       
+                                        <img src="EmailStudio.png"  alt="Email Studio Logo" class="slds-m-right_small service-logo">
                                         <h3 class="slds-text-heading_small">Email Studio</h3>
                                     </div>
+                                </a>
                                     <div class="slds-card__body slds-card__body_inner">
                                         <p>Create and send personalized, targeted email campaigns at scale.</p>
                                     </div>
