--- a/emailStudio.html
+++ b/emailStudio.html
@@ -77,11 +77,9 @@
             <article class="slds-p-around_medium">
                 <section class="slds-m-bottom_large">
                     <div class="email-studio-section slds-grid slds-grid_vertical-align-center">
-                        <br>
-                        <br>
-                        
-                        <h1 class="slds-text-heading_large" style="font-size: 3rem; color: #003366;">Email Studio</h1>
-                        <img src="EmailStudio.png" alt="Email Studio Logo" class="service-logo" style="width: 150px; height: auto; margin-left: 20px;">
+                       
+                        <h1 class="slds-text-heading_large" style="font-size: 3rem; color: #003366;"><br>Email Studio
+                        <img src="EmailStudio.png" alt="Email Studio Logo" class="slds-container_large" style="width: 100px; height: auto; margin-left: 20px;"></h1>
                     </div>
                     <p class="slds-text-body_regular slds-m-top_medium">Email Studio is a powerful component of Salesforce Marketing Cloud, designed to help businesses create, manage, and automate sophisticated email marketing campaigns. As a comprehensive email marketing solution, Email Studio empowers marketers to deliver personalized, targeted, and timely communications to their audience.</p>
                     <section>
@@ -115,6 +113,51 @@
                         <li>Brand awareness: Keep your brand top-of-mind with consistent communication</li>
                     </ul>
                 </section>
+                <section class="slds-m-bottom_large">
+                <div class="section">
+                    <h2 class="slds-text-heading_medium">Email Creation</h2>
+                    <ul>
+                        <li><strong>Drag-and-Drop Editor:</strong> Design emails easily without coding.</li>
+                        <li><strong>Templates and Content Blocks:</strong> Use customizable templates.</li>
+                        <li><strong>HTML and AMP Support:</strong> Create custom HTML emails and dynamic content.</li>
+                        <li><strong>Dynamic Content:</strong> Personalize emails based on recipient data.</li>
+                    </ul>
+                </div>
+            </section>
+                <section class="slds-m-bottom_large">
+                <div class="section">
+                    <h2 class="slds-text-heading_medium">Audience Management</h2>
+                    <ul>
+                        <li><strong>Segmentation:</strong> Target specific groups with advanced criteria.</li>
+                        <li><strong>Subscriber Lists and Data Management:</strong> Efficiently manage and integrate subscriber data.</li>
+                        <li><strong>Profile Management:</strong> Maintain detailed subscriber profiles.</li>
+                        <li><strong>Preference Centers:</strong> Allow subscribers to manage their preferences.</li>
+                    </ul>
+                </div>
+            </section>
+                <section class="slds-m-bottom_large">
+                <div class="section">
+                    <h2 class="slds-text-heading_medium">A/B Testing and Optimization</h2>
+                    <ul>
+                        <li><strong>A/B Testing:</strong> Test different email elements for better performance.</li>
+                        <li><strong>Multivariate Testing:</strong> Simultaneously test multiple variables.</li>
+                        <li><strong>Reporting and Analytics:</strong> Gain insights into campaign performance.</li>
+                        <li><strong>Recommendations and Insights:</strong> Optimize campaigns with data-driven insights.</li>
+                    </ul>
+                </div>
+            </section>
+                <section class="slds-m-bottom_large">
+                <div class="section">
+                    <h2>Deliverability and Compliance</h2>
+                    <ul>
+                        <li><strong>Deliverability Tools:</strong> Monitor and improve email deliverability.</li>
+                        <li><strong>Inbox Preview:</strong> Preview emails in various clients and devices.</li>
+                        <li><strong>Spam Filter Testing:</strong> Identify issues that affect deliverability.</li>
+                        <li><strong>Compliance Management:</strong> Adhere to global regulations like GDPR and CAN-SPAM.</li>
+                        <li><strong>Bounce Management:</strong> Handle bounced emails to maintain list health.</li>
+                    </ul>
+                </div>
+            </section>
 
                 <div class="slds-text-align_center">
                     <a href="#contact" class="slds-button slds-button_brand">Contact Us for Email Studio Services</a>
