--- a/emailStudio.html
+++ b/emailStudio.html
@@ -115,7 +115,8 @@
                 </section>
                 <section class="slds-m-bottom_large">
                 <div class="section">
-                    <h2 class="slds-text-heading_medium">Email Creation</h2>
+                    <h1 class="slds-text-heading_large">Features of Email Studio</h1>
+                    <h2 class="slds-text-heading_medium">--Email Creation--</h2>
                     <ul>
                         <li><strong>Drag-and-Drop Editor:</strong> Design emails easily without coding.</li>
                         <li><strong>Templates and Content Blocks:</strong> Use customizable templates.</li>
@@ -126,7 +127,7 @@
             </section>
                 <section class="slds-m-bottom_large">
                 <div class="section">
-                    <h2 class="slds-text-heading_medium">Audience Management</h2>
+                    <h2 class="slds-text-heading_medium">--Audience Management--</h2>
                     <ul>
                         <li><strong>Segmentation:</strong> Target specific groups with advanced criteria.</li>
                         <li><strong>Subscriber Lists and Data Management:</strong> Efficiently manage and integrate subscriber data.</li>
@@ -137,7 +138,7 @@
             </section>
                 <section class="slds-m-bottom_large">
                 <div class="section">
-                    <h2 class="slds-text-heading_medium">A/B Testing and Optimization</h2>
+                    <h2 class="slds-text-heading_medium">--A/B Testing and Optimization--</h2>
                     <ul>
                         <li><strong>A/B Testing:</strong> Test different email elements for better performance.</li>
                         <li><strong>Multivariate Testing:</strong> Simultaneously test multiple variables.</li>
@@ -148,7 +149,7 @@
             </section>
                 <section class="slds-m-bottom_large">
                 <div class="section">
-                    <h2>Deliverability and Compliance</h2>
+                    <h2 class="slds-text-heading_medium">--Deliverability and Compliance--</h2>
                     <ul>
                         <li><strong>Deliverability Tools:</strong> Monitor and improve email deliverability.</li>
                         <li><strong>Inbox Preview:</strong> Preview emails in various clients and devices.</li>
@@ -158,7 +159,26 @@
                     </ul>
                 </div>
             </section>
-
+            <section class="slds-m-bottom_large">
+            <h1 class="slds-text-heading_medium">Benefits of Using Email Studio</h1>
+                    <div class="benefits">
+                        <div class=slds-text-heading_medium"">
+                            <h2><strong>Personalization</strong></h2>
+                            <p>Email Studio enables precise personalization by using dynamic content and segmentation. Tailor emails based on recipient data like past behavior and preferences, enhancing relevance and engagement.</p>
+                        </div>
+                        <div class="benefit">
+                            <h2><strong>Efficiency</strong></h2>
+                            <p>Streamline email marketing with automation and templates. Automate workflows and use pre-designed templates to save time and maintain consistency in your campaigns.</p>
+                        </div>
+                        <div class="benefit">
+                            <h2><strong>Improved ROI</strong></h2>
+                            <p>Boost ROI with targeted campaigns. Advanced segmentation and A/B testing optimize email performance, leading to higher engagement and conversion rates.</p>
+                        </div>
+                        <div class="benefit">
+                            <h2><strong>Data-Driven Decisions</strong></h2>
+                            <p>Leverage analytics and reporting tools to make informed decisions. Track performance metrics to refine strategies and improve campaign effectiveness.</p>
+                        </div>
+                    </section>
                 <div class="slds-text-align_center">
                     <a href="#contact" class="slds-button slds-button_brand">Contact Us for Email Studio Services</a>
                 </div>
