--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Hibbert Group - Salesforce Marketing Cloud & Data Cloud Experts</title>
+    <title>Data Cloud Consulting Services - Red Hibbert Group</title>
     <meta name="description" content="Red Hibbert Group specializes in Salesforce Marketing Cloud and Data Cloud implementations. Expert consultancy for data-driven marketing solutions.">
     <meta name="keywords" content="Salesforce, Marketing Cloud, Data Cloud, CRM, Digital Marketing, Customer Data Platform">
     <meta name="author" content="Red Hibbert Group">
